devbible version-coverage: java-jdk §3.5-3.8
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>